Update 'nugs0uikb-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:2165a0b2e12dcf5bb60dcb34651311da8dd489cb@sha256:4af02e8aaaf7223295de15e2fea2d03c8f9bebe5f194da87b0d53338ab5d6ee7

--- a/components/nugs0uikb-go/overlays/development/deployment-patch.yaml
+++ b/components/nugs0uikb-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: nugs0uikb-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:2165a0b2e12dcf5bb60dcb34651311da8dd489cb@sha256:4af02e8aaaf7223295de15e2fea2d03c8f9bebe5f194da87b0d53338ab5d6ee7
+          name: container-image
